# Hailo-Application-Code-Examples

runtime/hailo-8/cpp/instance_segmentation/yolov8seg/: CMakeLists.txt  build.sh  fetch_libs.sh  yolov8seg_example.cpp
